<resources>
    <string name="app_name">ProcessManagement</string>
    <string name="login">用户登录</string>
    <string name="register">用户注册</string>
    <string name="enter_username">请输入用户名</string>
    <string name="enter_password">请输入密码</string>
    <string name="login_button">登录</string>
    <string name="JiZhu">记住密码</string>
    <string name="forget_password">找回密码</string>
    <string name="menu_search">搜索</string>
    <string name="menu_notifications">项目1</string>
    <string name="item_01">项目2</string>
    <string name="item_02">项目3</string>
    <string name="user">用户详细信息</string>
    <string name="name">姓名</string>
    <string name="job">职务</string>
    <string name="work">获取项目名称</string>
    <string name="enter_work">请填写项目名称</string>
    <string name="sign">每日签到</string>
    <string name="signIn">签到</string>
    <string name="signOut">签退</string>
    <string name="getLocal">获取当前位置</string>
    <string name="getImg">拍照获取图片</string>
    <string name="phoneNumber">手机号</string>
    <string name="idNumber">身份证号</string>
    <string name="ZhiCheng">职称</string>
    <string name="Bumen">部门</string>
    <string name="ProjectName">获取项目名称</string>
    <string name="ProjectTime">获取项目时间</string>
    <string name="project_details">获取项目描述</string>
</resources>
