<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:textSize="25sp"
        android:gravity="center"/>
    <TextView
        android:id="@+id/name"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"/>
    <TextView
        android:id="@+id/phone_number"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phoneNumber" />
    <TextView
        android:id="@+id/persion_id"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/idNumber" />
    <TextView
        android:id="@+id/positio"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ZhiCheng" />
    <TextView
        android:id="@+id/bumen"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Bumen" />
    <TextView
        android:id="@+id/person_job"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/job" />
</LinearLayout>