<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.andios.processmanagement.Login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/login_go_back"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/back"/>
        <TextView
            android:layout_weight="10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:gravity="center"/>
    </LinearLayout>
    <EditText
        android:id="@+id/login_enter_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_username"/>
    <EditText
        android:id="@+id/login_enter_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"/>
    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/login_button"/>
    <LinearLayout
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/forget_password"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"/>
        <TextView
            android:id="@+id/register"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:gravity="end"/>
    </LinearLayout>
</LinearLayout>
